--- a/src/Stylesheets/Responsive.css
+++ b/src/Stylesheets/Responsive.css
@@ -193,6 +193,7 @@
         margin-bottom: 100px;
         margin-top: 0px;
         padding-top: 100px;
+        padding-bottom: 50px;
         font-family: 'Inter', sans-serif;
     }
     .financial__system {
@@ -280,12 +281,49 @@
     font-size: 16px;
     color: gray;
     font-family: 'Inter', sans-serif;
-    margin-left: 20px;
-    margin-right: 20px;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   text-align: left;
     font-weight: lighter;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
    
 }
+.webapp{
+   width: 100px;
+    height: 25px;
+    background-color: #2FA4FF;
+    border-radius: 11rem;
+    border: none;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 1rem;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    text-decoration: none;
+    padding: 10px;
+   margin-left: -20px;
+}
+
+.right__side3{
+        margin-left: -90px;
+     height: 180px;
+     width: 110px;
+        z-index: 9999;
+        top: 0;
+        border-radius: 15px;
+        margin-top: 30px;
+        overflow: unset;
+        position: absolute;
+        display: unset;
+        padding: 10px;
+        justify-content: space-around;
+        background-color: white;
+     
+        
+    }
+
 .email{
     display: flex;
     border: none;
@@ -350,6 +388,22 @@
         width: 100%;
         margin-top: 100px;
     }
+    .webapp{
+        width: 120px;
+        height: 25px;
+        background-color: #2FA4FF;
+        border-radius: 11rem;
+        border: none;
+        margin-left: 20px;
+        margin-right: 5px;
+        padding-top: 5px; 
+        margin-top: 5px;
+        font-weight: 600;
+        font-size: 1rem;
+        color: white;
+        font-family: 'Inter', sans-serif;
+        text-decoration: none;
+    }
     
     .all__cards{
         display: flex;
@@ -357,16 +411,17 @@
         
     }
     .learn__more{
-        position: absolute;
+       
         width: 169.54px;
         height: 45px;
         left: 910px;
-        top: 972px;
+        margin-top: 60%;
         padding-top: 15px;
         background: #36B7FF;
         box-shadow: 0px 8px 30px -5px rgba(0, 130, 255, 0.25);
         border-radius: 30px;
         text-align: center;
+        
     }
     
     .key__section{
@@ -399,6 +454,7 @@
        margin-left: initial;
         
     }
+    
     .navbar{
         width: 100%;
         z-index: 9999;
